[project]
name = "serpapi-flights"
version = "0.1.0"
description = "Remote MCP server for searching flights via SerpAPI Google Flights"
requires-python = ">=3.10"
dependencies = [
    "fastmcp>=2.0.0",
    "google-search-results>=2.4.2",
    "pydantic>=2.0.0",
    "uvicorn>=0.30.0",
]

[project.scripts]
serpapi-flights = "serpapi_flights:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
